--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "postcss": "^8.2.15",
     "preact": "^10.5.13",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
+    "react-mailchimp-email-signup-form": "^2.0.2",
     "reading-time": "1.3.0",
     "rehype-katex": "^4.0.0",
     "remark-autolink-headings": "6.0.1",
