--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
     "gray-matter": "^4.0.2",
+    "html-entities": "^2.3.2",
     "image-size": "1.0.0",
     "next": "10.2.3",
     "next-mdx-remote": "^3.0.1",
@@ -25,6 +28,7 @@
     "preact": "^10.5.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-mailchimp-subscribe": "^2.1.3",
     "reading-time": "1.3.0",
     "rehype-katex": "^4.0.0",
     "remark-autolink-headings": "6.0.1",
@@ -37,6 +41,9 @@
   "devDependencies": {
     "@next/bundle-analyzer": "10.2.3",
     "@svgr/webpack": "^5.5.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.4.3",
+    "@types/react": "^17.0.15",
     "cross-env": "^7.0.3",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^8.3.0",
@@ -55,6 +62,8 @@
     "remark-frontmatter": "3.0.0",
     "remark-parse": "9.0.0",
     "remark-stringify": "9.0.1",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5",
     "unified": "9.2.1",
     "unist-util-visit": "2.0.3"
   },
