using mailchimp api routes instead

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_MAILCHIMP_URL=https://twitter.us15.list-manage.com/subscribe/post?u=ccf94f5f6edf399b669741a47&amp;id=a8d72ea287'
+NEXT_PUBLIC_MAILCHIMP_URL='https://twitter.us15.list-manage.com/subscribe/post?u=ccf94f5f6edf399b669741a47&amp;id=a8d72ea287'
