--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.55",
     "@mapbox/rehype-prism": "^0.6.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
@@ -28,6 +29,7 @@
     "preact": "^10.5.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-mailchimp-form": "^1.0.2",
     "react-mailchimp-subscribe": "^2.1.3",
     "reading-time": "1.3.0",
     "rehype-katex": "^4.0.0",
@@ -36,7 +38,7 @@
     "remark-footnotes": "^3.0.0",
     "remark-math": "^3.0.1",
     "remark-slug": "6.0.0",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "10.2.3",
